# eurobench_tests

./: README.md
comtest_tests/: CMakeLists.txt  package.xml
comtest_tests/launch/: comtest_tests_gazebo.launch
comtest_tests/python/: com_computation.py  comtest_test_reemc_gazebo.py  gazebo2tf.py
comtest_tests/src/: gazebo2tf.cpp
data/zmp_comtest/: test1.csv
data/zmp_ref_ankles/: ref_tests  ref_tests.csv  test1.csv  test2.csv  test3.csv  test4.csv  test5.csv  test6.csv  test7.csv  test8.csv
data/zmp_ref_ankles/bags/: bag_2022-04-05-20-03-17.bag  bag_2022-04-20-10-49-51.bag  bag_2022-04-20-10-54-45.bag  bag_2022-04-20-10-57-41.bag  bag_2022-04-20-10-58-23.bag  bag_2022-04-20-11-00-31.bag  bag_2022-04-20-11-10-03.bag  bag_2022-04-20-12-21-37.bag
docker/: dockerfile_eurobench_tests  entrypoint.sh
dysturbance_tests/: CMakeLists.txt  package.xml
dysturbance_tests/config/: config_pendulum.yaml  config_protocol_1.yaml  config_subject.yaml
dysturbance_tests/launch/: generic_protocol.launch  generic_protocol_1.launch
dysturbance_tests/python/: dysturbance_test_reemc_gazebo.py
teo_eurobench/: computeCOM.py
zmp_controller/: CMakeLists.txt  data_order_zmp_controller_tests.py  package.xml
zmp_controller/include/: LIPM2d.h
zmp_controller/launch/: zmp_controller.launch  zmp_controller_no_control.launch
zmp_controller/src/: LIPM2d.cpp  plotBoth.py  sentPositionCommandJoints.bash  sentPositionCommandJoints.sh  zmp_controller.cpp
