<?xml version="1.0"?>
<package format="2">
  <name>zmp_controller</name>
  <version>0.0.0</version>
  <description>zmp_controller description</description>

 <maintainer email="emenende@pa.uc3m.es">Elisabeth Menendez</maintainer>
  <license>MIT</license>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>geometry_msgs</depend>
  <depend>genmsg</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>actionlib</depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>